--- a/supabase/supabase/config.toml
+++ b/supabase/supabase/config.toml
@@ -45,9 +45,7 @@ max_client_conn = 100
 [db.seed]
 # If enabled, seeds the database after migrations during a db reset.
 enabled = true
-# Specifies an ordered list of seed files to load during db reset.
-# Supports glob patterns relative to supabase directory: "./seeds/*.sql"
-sql_paths = ["./seed.sql"]
+sql_paths = ["./seed/initial_data.sql"]
 
 [realtime]
 enabled = true
